--- a/Qsnake/singlemode.ui
+++ b/Qsnake/singlemode.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>EndlessMode</class>
- <widget class="QWidget" name="EndlessMode">
+ <class>SingleMode</class>
+ <widget class="QWidget" name="SingleMode">
   <property name="geometry">
    <rect>
     <x>0</x>
