--- a/Qsnake/pause.ui
+++ b/Qsnake/pause.ui
@@ -72,7 +72,7 @@
     <item row="2" column="3">
      <widget class="QPushButton" name="save">
       <property name="text">
-       <string>存档退出</string>
+       <string>存档</string>
       </property>
      </widget>
     </item>
