--- a/Qsnake/rules.ui
+++ b/Qsnake/rules.ui
@@ -54,12 +54,15 @@
     </property>
     <item>
      <property name="text">
-      <string>无尽模式</string>
+      <string>单人模式</string>
      </property>
     </item>
     <item>
      <property name="text">
-      <string>任务模式</string>
+      <string>无尽模式</string>
+     </property>
+     <property name="text">
+      <string/>
      </property>
     </item>
     <item>
