--- a/Qsnake/pairmode.ui
+++ b/Qsnake/pairmode.ui
@@ -1,5 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
+ <author/>
+ <comment/>
+ <exportmacro/>
  <class>PairMode</class>
  <widget class="QWidget" name="PairMode">
   <property name="geometry">
@@ -14,6 +16,6 @@
    <string>Form</string>
   </property>
  </widget>
- <resources/>
+ <pixmapfunction/>
  <connections/>
 </ui>
