--- a/Qsnake/rules.ui
+++ b/Qsnake/rules.ui
@@ -102,7 +102,7 @@
      </property>
      <item>
       <property name="text">
-       <string>衷心感谢张勤建老师的教导与黄致焕学长等</string>
+       <string>衷心感谢张勤健老师的教导与黄致焕学长等</string>
       </property>
      </item>
      <item>
